# SYCL_Reference

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  COPYING.rst  LICENSE.adoc  LICENSE.rst  Makefile  README.md  README.rst  doc.py  doc8.ini  packages.txt  packages.txt.license  readthedocs.yml  requirements.txt  sycl-gitlab-ci.yml  ubuntu-packages.txt  update-1.2.1.rst
.github/: checks.yml
.reuse/: dep5
dpcpp/: conf.py
misc/: doc-flows.vsdx  dpc++-document-systems.pptx
source/: Doxyfile  backends.rst  built-in-functions.rst  class-availability.rst  common.rst  conf.py  data-types.rst  data.rst  error.rst  generic-and-non-generic.rst  glossary.rst  header-file.rst  host-task.rst  index.rst  intro.rst  io.rst  namespaces.rst  parallelism.rst  usm.rst  (+5 more)
source/examples/: CMakeLists.txt  Makefile  a.out  anatomy.cpp  async-handler.cpp  async-handler.out  atomic.cpp  atomic.out  context.cpp  context.out  creating-sub-buffers.cpp  creating-sub-buffers.out  def_kernels_lambda.cpp  def_kernels_named_function_obj.cpp  def_kernels_named_function_obj.out  event-elapsed-time.cpp  event-elapsed-time.out  exception-handling.cpp  exception-handling.out  execution-model.cpp  execution-model.out  fall-back.cpp  fall-back.out  get-platforms.cpp  get-platforms.out  get_devices.cpp  get_devices.out  gpu-platform.cpp  gpu-selector.cpp  gpu-selector.out  handler-copy.cpp  handler-copy.out  host-task.cpp  host-task.out  kernel-model.cpp  memory-model.cpp  nd-range.cpp  nd-range.out  private_memory_example.cpp  private_memory_example.out  (+18 more)
(+254 files in other folders)
